# AIRM

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint-and-test.yml
